fix: tabs page, overflow on mobile, header looking weird on mobile, navigation bar

--- a/src/global.css
+++ b/src/global.css
@@ -61,6 +61,10 @@
 p, h1, h2, h3, h4, h5, h6 {
     font-size: 14px;
 }
+
+h1,h2,h3,h4,h5,h6 {
+    @apply tracking-tighter;
+}
  
 @layer base {
     :root {
